# routes/channels.php
@@ -13,6 +13,7 @@ use Illuminate\Support\Facades\Broadcast;
 |
 */
 
-Broadcast::channel('App.Models.User.{id}', function ($user, $id) {
-    return (int) $user->id === (int) $id;
+Broadcast::channel('chatroom.{chatroomId}', function ($user, $chatroomId) {
+    return true; // Implement custom authorization if needed.
 });
+
